# django-settings-holder

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  noxfile.py  pyproject.toml  search.html
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  main.yml  release.yml  test.yml
css/: docs.css
docs/: index.md  setup.md
example_project/app/: apps.py  settings.py
example_project/project/: settings.py
search/: search_index.json
settings_holder/: __init__.py  fixtures.py  holder.py  utils.py
setup/: index.html
tests/: conftest.py  test_utils.py
tests/django/: settings.py
tests/project/: settings.py
